<resources>
    <string name="app_name">Memoroid</string>
    <string name="action_settings">Settings</string>
    <string name="switch_done">Show \"done\" tasks</string>
    <string name="list_empty_hint">Empty list</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="title_mandatory">Title is mandatory</string>
    <string name="back_task_confirmation">Are you sure to cancel ?</string>
    <string name="priority">Task priority</string>
    <string name="deadline">deadline</string>
    <string name="date_placeholder">JJ/MM/AA</string>
    <string name="time_placeholder">HH:MM:SS</string>
    <string name="delete_confirmation">Are you sur to delete this Task ?</string>
</resources>
